fix: correccion de las clases service, agregando patrones de diseño más visibles en los nombres